updates to make the thing work ^^

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,5 @@
 version: '3'
 services:
-  proxysql:
-    image: proxysql/proxysql:2.6.3
-    ports:
-      - "6032:6032"
-      - "6070:6070"
-      - "6080:6080"
 
   database-1:
     image: mariadb:11.4.2
@@ -13,8 +7,9 @@ services:
       - database.env
     ports:
       - "3307:3306"
-    depends_on:
-      - proxysql
+    volumes:
+      - database-1-data:/var/lib/mysql
+      - database-1-galera.cnf:/etc/mysql/conf.d
 
   database-2:
     image: mariadb:11.4.2
@@ -23,8 +18,10 @@ services:
     ports:
       - "3308:3306"
     depends_on:
-      - proxysql
       - database-1
+    volumes:
+      - database-2-data:/var/lib/mysql
+      - database-2-galera.cnf:/etc/mysql/conf.d
 
   db-loadbalancer:
     image: mariadb/maxscale:24.02.1
@@ -43,3 +40,25 @@ services:
     ports:
       - "8080:8080"
     command: start-dev
+
+  python-app:
+    build: ./backend
+    ports:
+      - "5001:5000"
+    depends_on:
+      - keycloak
+      - db-loadbalancer
+
+  react-app:
+    build: ./frontend/vct_project
+    ports:
+      - "3000:3000"
+    depends_on:
+      - keycloak
+      - python-app
+
+volumes: # named volumes can be managed easier using docker-compose
+  database-1-data:
+  database-1-galera.cnf:
+  database-2-data:
+  database-2-galera.cnf:
