--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.1.2
-Flask-Cors==3.0.10
-Flask-SQLAlchemy==2.5.1
-flask-keycloak==1.0.1
-mysqlclient==2.0.3
+flask==3.0.3
+flask-cors==3.0.10
+requests==2.32.3
+sqlalchemy==2.0.29
+pymysql==1.1.1
